Fix alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-weight: 400;
     font-style: normal;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
@@ -73,6 +73,7 @@
     margin-top: auto;
     padding: 10px 0;
   }
+  
   h1 {
     font-size: 3em;
     margin-bottom: 0.5em;
@@ -94,5 +95,16 @@
     padding: 0.5em 1em;
     text-decoration: none;
     border-radius: 5px;
+  }
+  
+  /* Add a breakpoint for smaller screens */
+  @media only screen and (max-width: 600px) {
+    .container {
+      flex-direction: column;
+    }
+    
+    .left-column, .right-column {
+      max-width: 100%;
+    }
   }
   
